(lang dune 3.8)

(using melange 0.1)

(name melange-tea)

(license "MIT")

(maintainers "Eyal Chojnowski")

(authors "Eyal Chojnowski")

(homepage https://github.com/noomly/melange-tea)

(bug_reports https://github.com/noomly/melange-tea/issues)

(package
 (allow_empty)
 (name melange-tea)
 (synopsis "Melange tea")
 (description "Port of Bucklescript-tea for Melange"))
