opam-version: "0.1"
synopsis: "Melange tea"
description: "Port of bucklescript-tea for melange"
maintainer: ["Eyal Chojnowski"]
authors: ["Eyal Chojnowski"]
license: "MIT"
homepage: "https://github.com/noomly/melange-tea"
bug-reports: "https://github.com/noomly/melange-tea/issues"
depends: [
  "ocaml" {>= "5.1.0"}
  "reason" {>= "3.10.0"}
  "dune" {>= "3.8"}
  "melange" {>= "2.0.0"}
  "reason-react" {>= "0.13.0"}
  "reason-react-ppx"
  "opam-check-npm-deps" {with-test} # todo: use with-dev-setup once opam 2.2 is out
  "ocaml-lsp-server" {with-test} # todo: use with-dev-setup once opam 2.2 is out
  "dot-merlin-reader" {with-test} # todo: use with-dev-setup once opam 2.2 is out
  "odoc" {with-doc}
]
dev-repo: "git+https://github.com/noomly/melange-tea.git"
